- File name and first line globs were not shown in the 'Mode specific'
  option pane
- Fixed ArrayIndexOutOfBoundsException when scrolling a one-line buffer
  with the WheelMouse plugin
- "Insert File" was broken since 4.0pre1
- Text area syntax highlighting would not always be updated properly
  when switching modes
- Display_Shortcuts macro didn't work

+ API Additions

- BufferUpdate.SAVED message type added. Previously, DIRTY_CHANGED could
  be used for this purpose, but since jEdit now clears the dirty flag
  when all changes up to a save are undone, doing on-save actions when a
  DIRTY_CHANGED is received can have unexpected consequences.
- New method: MiscUtilities.quicksort(List a, Compare a)
- MiscUtilities.Compare now extends java.util.Comparator (which has the
  same API)
- MiscUtilities.quicksort(Object[],Compare) now calls
  java.util.Arrays.sort()
- MiscUtilities.quicksort(Object[],Comparator),
  MiscUtilities.quicksort(List,Comparator) methods added
- The above changes are completely binary compatible, and they make
  jEdit's sorting API more consistent with the Java collections API.
- New OperatingSystem class, with the following methods:

  isDOSDerived(), isWindows(), isWindows9x(), isWindowsNT(), isOS2()
  isMacOS()
  isUnix()
  hasJava14()

+ API Changes

- Offset conversion API changes. Old methods (xToOffset(), offsetToX(),
  yToLine(), lineToY()) deprecated; you must now use xyToOffset() and
  offsetToXY() instead. Also note that xyToOffset() will return -1 if
  the y co-ordinate is not visible in the text area.
- The BufferChangeListener API was inconsistent. foldLevelChanged() was
  called with the last two parameters being a start and end line,
  respectively, but the documentation claimed that the first parameter
  was a single line index, and the second was a fold level. This was an
  error on the part of the documentation, and has since been fixed.
- TextAreaExtension API replaces TextAreaHighlights. It now supports the