@@ -38,7 +38,7 @@ import org.gjt.sp.util.Log;
  * Class that implements regular expression and literal search within
  * jEdit buffers.
  * @author Slava Pestov
- * @version $Id: SearchAndReplace.java,v 1.16 2001/12/03 10:52:27 spestov Exp $
+ * @version $Id: SearchAndReplace.java,v 1.17 2002/01/22 09:34:27 spestov Exp $
  */
 public class SearchAndReplace
 {
@@ -134,6 +134,9 @@ public class SearchAndReplace
 			return;
 
 		SearchAndReplace.regexp = regexp;
+		if(regexp && reverse)
+			reverse = false;
+
 		matcher = null;
 
 		EditBus.send(new SearchSettingsChanged(null));
@@ -161,7 +164,7 @@ public class SearchAndReplace
 		if(reverse == SearchAndReplace.reverse)
 			return;
 
-		SearchAndReplace.reverse = reverse;
+		SearchAndReplace.reverse = (regexp ? false : reverse);
 
 		matcher = null;
 
@@ -952,4 +955,6 @@ loop:		for(;;)
 
 		return occurCount;
 	} //}}}
+
+	//}}}
 }
